Version 1.4.3
* Post 2.0.1 tagging
* Adopt more unix-standard return values in utility programs

Version 1.4.2
* Post 2.0.0 tagging
* Start adding state counting for use in power detection.  2-bit sampling supported only at this time.
* Add m5tsys
* Can now make RedHat RPM
* Fix some memory leaks identified by valgrind.
* Introduce new_mark5_stream_absorb.  like new_mark5_stream, but it cleanly and immediately deallocates space for the temporary mark5_stream_generic and mark5_format_generic structures
* Version for DiFX-2.0.1, June 10, 2011

Version 1.4.1
* revert to standard "c" types (long long, unsigned char, ...) over int64_t, uint8_t
* disable all K5 code until that is at least somewhat useful
* Some memory leak fixes from Alexander Neidhardt and Martin Ettl (from Wettzell)
* Add m5fold utility
* Add some 4 and 8 bit unpackers for VDIF format
* m5d and m5spec : behave better if -h is given
* mark5_format_mark5b_init: if no nanoseconds in headers, then assume 2048-16-2 (this is to support Mark5B mode via Mark5C)
* Put pcal utility in this package
* Add zerocorr -- a zero baseline cross correlator
* Add sigint catching to several utils
* Improve string (mostly filename) handling safety with snprintf
* Allow read from stdin (at least in some circumstances) via filename = "-"
* Version for DiFX-2.0.0

Version 1.4.0
* Add VDIF format -- but only for formats with 1 thread
* Add VLBN format == VLBA without data modulation
* Fix blank range checking for a small subset of Mark4 modes
	(Thanks to Sergei Pogrebenko and Jan Wagner for the bug report)
* Version for DiFX-1.5.2

Version 1.3.2
* Fix sample granularity calculation for Mark5B
* Version for DiFX-1.5.1

Version 1.3.1
* Version for DiFX-1.5

Version 1.3.0
* Post NRAO-DiFX 1.1
* Fix file based stream offset problem for all data alignments
* Start of Mark5C development

Version 1.2.3
* fix minor bug in blanking code -- end of header not blanked on first frame
  of mark4 format